# initvenv

./: .editorconfig  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  README.md  TODO.md  __Gemfile__  _config.yml  about.md  index.md  pyproject.toml  site.webmanifest
.github/workflows/: bohr.yml  build-and-publish-wheels.yml
_includes/: custom-head.html  head.html  profile.md
_layouts/: home.html  post.html
_posts/: 2025-10-29-linkedin-publications.html
assets/css/: 404.css  main.css
src/initvenv/: _launcher.py
src/initvenv/scripts/: initvenv.bat
view/: about.md  download.html  download.md  howuse.md  screenshots.md
